# RenderSimple

./: .gitignore  CMakeLists.txt  README.md  main.cpp
shader/: fragment.frag  fragment.frag.spv  fragment.spv  trans2spv.bat  vertex.spv  vertex.vert  vertex.vert.spv
